--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -92,7 +92,7 @@
                             android:layout_width="@dimen/spacing_mlarge"
                             android:layout_height="@dimen/spacing_mlarge"
                             android:src="@drawable/ic_pin"
-                            android:tint="@color/white" />
+                            app:tint="@color/white" />
 
                         <TextView
                             android:id="@+id/txtLocation"
