--- a/app/src/main/res/layout/layout_user_profile.xml
+++ b/app/src/main/res/layout/layout_user_profile.xml
@@ -211,7 +211,7 @@
                     android:layout_height="wrap_content"
                     android:minHeight="200dp">
 
-                    <android.support.v7.widget.RecyclerView
+                    <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
