--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -25,16 +25,16 @@
             android:id="@+id/txtComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This is a test comment."
-            android:textColor="@color/black"
             android:layout_marginTop="2dp"
             android:layout_marginRight="20dp"
-            android:padding="2dp"
-            android:textSize="14sp"
-            android:layout_toRightOf="@id/icon"
             android:layout_toLeftOf="@+id/btnMore"
+            android:layout_toRightOf="@id/icon"
             android:autoLink="email|web"
-            android:linksClickable="true" />
+            android:linksClickable="true"
+            android:padding="2dp"
+            android:text="This is a test comment."
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
