--- a/app/src/main/res/layout/activity_liked_post.xml
+++ b/app/src/main/res/layout/activity_liked_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LikedPostActivity">
+    tools:context=".OfficeActivity.LikedPostActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
